src/test/ui/macros/macro-stability.stderr
error[E0658]: use of unstable library feature 'local_unstable'
  --> $DIR/macro-stability.rs:19:5
   |
LL |     local_unstable!();
   |     ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(local_unstable)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'local_unstable'
  --> $DIR/macro-stability.rs:20:5
   |
LL |     local_unstable_modern!();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(local_unstable)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_macros'
  --> $DIR/macro-stability.rs:21:5
   |
LL |     unstable_macro!();
   |     ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_macros)]` to the crate attributes to enable

warning: use of deprecated item 'deprecated_macro': deprecation reason
  --> $DIR/macro-stability.rs:24:5
   |
LL |     deprecated_macro!();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated item 'local_deprecated': local deprecation reason
  --> $DIR/macro-stability.rs:26:5
   |
LL |     local_deprecated!();
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0658`.
